# backend/routes/api.php
@@ -137,6 +137,9 @@ Route::middleware([PrometheusMiddleware::class])->group(function () {
                 Route::post('/files', [FileController::class, 'upload'])->name('files.upload');
                 Route::delete('/files/{id}', [FileController::class, 'delete'])->name('files.delete');
 
+                Route::post('/import-files', [FileController::class, 'importUpload'])->name('files.import-upload');
+                Route::delete('/import-files/{id}', [FileController::class, 'importDelete'])->name('files.import-delete');
+
 
                 Route::get('/network-things', [NetworkThingController::class, 'all'])->name('network-things.all');
                 Route::get('/network-things/{id}', [NetworkThingController::class, 'getOne'])->name('network-things.get-one');
